--- a/abndnd_nowjtq.hk_auction_house.json
+++ b/abndnd_nowjtq.hk_auction_house.json
@@ -1,27 +1,27 @@
 {
 	"_id": "abndnd_nowjtq.hk_auction_house",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "abndnd_nowjtq.hk_auction_house",
 	"sector": "SPC_2500",
 	"sec_level": 4,
 	"date_added": 1563098745814,
-	"last_scraped": 1568065163374,
+	"last_scraped": 1568698503934,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563098745814
 		}
 	],
-	"updt": 1568053834436,
-	"edit": 81,
-	"next_scrape": 1568111281470,
+	"updt": 1568065336743,
+	"edit": 82,
+	"next_scrape": 1568739695213,
 	"category": "dice_roller",
-	"last_update": 1568065163374,
+	"last_update": 1568698503934,
 	"output": [
 		{
 			"args": {},
-			"calls": 953024,
+			"calls": 965674,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"s the",
