--- a/uknown_156c0c.trans.json
+++ b/uknown_156c0c.trans.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_156c0c.trans",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_156c0c.trans",
 	"sector": "K_4792",
 	"sec_level": 4,
 	"date_added": 1561314287180,
-	"last_scraped": 1568128860374,
+	"last_scraped": 1568698855476,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561314287180
 		}
 	],
-	"next_scrape": 1568171172822,
+	"next_scrape": 1568744532834,
 	"category": "coin_flipper",
-	"last_update": 1568128860374,
+	"last_update": 1568698855476,
 	"output": [
 		{
 			"args": {},
-			"calls": 2214217,
+			"calls": 2228085,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"u? Tw",
@@ -213,8 +213,8 @@
 			]
 		}
 	],
-	"updt": 1568121278318,
-	"edit": 209,
+	"updt": 1568128951361,
+	"edit": 210,
 	"identified": [
 		{
 			"document": "NOT FOUND",
