--- a/uknown_fzffni.bot_brain.json
+++ b/uknown_fzffni.bot_brain.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_fzffni.bot_brain",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_fzffni.bot_brain",
 	"sector": "K_3804",
 	"sec_level": 4,
 	"date_added": 1564461987370,
-	"last_scraped": 1568210774226,
+	"last_scraped": 1568699719290,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564461987370
 		}
 	],
-	"next_scrape": 1568254485886,
+	"next_scrape": 1568741601700,
 	"category": "plant_sim",
-	"last_update": 1568210774226,
+	"last_update": 1568699719290,
 	"output": [
 		{
 			"args": {},
@@ -71,7 +71,7 @@
 		},
 		{
 			"args": {},
-			"calls": 70817,
+			"calls": 72209,
 			"base": "c:\"dmio3k\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"iscus",
@@ -127,6 +127,6 @@
 			]
 		}
 	],
-	"updt": 1568203652037,
-	"edit": 147
+	"updt": 1568210866304,
+	"edit": 148
 }
