--- a/uknown_gfh12g.a.json
+++ b/uknown_gfh12g.a.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_gfh12g.a",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_gfh12g.a",
 	"sector": "VNP_7825",
 	"sec_level": 4,
 	"date_added": 1566480192852,
-	"last_scraped": 1568076929158,
+	"last_scraped": 1568698573390,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566480192852
 		}
 	],
-	"next_scrape": 1568120838386,
+	"next_scrape": 1568741583065,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568076929158,
+	"last_update": 1568698573390,
 	"output": [
 		{
 			"args": {},
@@ -45,7 +45,7 @@
 		},
 		{
 			"args": {},
-			"calls": 94238,
+			"calls": 97044,
 			"base": "YOU COULD WIN 4K537GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 			"fragments": [
 				" Mallo",
@@ -70,8 +70,8 @@
 			]
 		}
 	],
-	"updt": 1568068269371,
-	"edit": 42,
+	"updt": 1568077065203,
+	"edit": 43,
 	"pl_output": "YOU COULD WIN 1GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"identified": [
 		{
