--- a/uknown_lx2epa.sha256.json
+++ b/uknown_lx2epa.sha256.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lx2epa.sha256",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "player",
 	"script": "uknown_lx2epa.sha256",
 	"sector": "K_5861",
 	"sec_level": 4,
 	"date_added": 1561431825883,
-	"last_scraped": 1568131202592,
+	"last_scraped": 1568698903912,
 	"script_log": [
 		{
 			"type": "added",
@@ -26,7 +26,7 @@
 		]
 	],
 	"pl_output": "{\"ok\":false,\"msg\":\"You didn't give me any plaintext. Please pass txt:\\\"textToHash\\\"\"}",
-	"next_scrape": 1568223954025,
-	"updt": 1568123308621,
-	"edit": 86
+	"next_scrape": 1568790126608,
+	"updt": 1568131429557,
+	"edit": 87
 }
