--- a/uknown_ui7f8p.db.json
+++ b/uknown_ui7f8p.db.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ui7f8p.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_ui7f8p.db",
 	"sector": "NGC_1810",
 	"sec_level": 4,
 	"date_added": 1566600461700,
-	"last_scraped": 1568197232705,
+	"last_scraped": 1568699508041,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 14,
-	"next_scrape": 1568243156012,
+	"next_scrape": 1568745254643,
 	"category": "plant_sim",
-	"last_update": 1568197232705,
+	"last_update": 1568699508041,
 	"output": [
 		{
 			"args": {},
@@ -46,7 +46,7 @@
 		},
 		{
 			"args": {},
-			"calls": 51970,
+			"calls": 52836,
 			"base": "c:\"4ucyxm\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ty wi",
@@ -84,6 +84,6 @@
 			]
 		}
 	],
-	"updt": 1568189889965,
-	"edit": 54
+	"updt": 1568197340684,
+	"edit": 55
 }
