--- a/uknown_vcd79v.ez40.json
+++ b/uknown_vcd79v.ez40.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_vcd79v.ez40",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_vcd79v.ez40",
 	"sector": "SPC_1857",
 	"sec_level": 4,
 	"date_added": 1566315754778,
-	"last_scraped": 1568118020040,
+	"last_scraped": 1568698803855,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566315754778
 		}
 	],
-	"next_scrape": 1568162182833,
+	"next_scrape": 1568743405972,
 	"category": "coin_flipper",
-	"last_update": 1568118020040,
+	"last_update": 1568698803855,
 	"output": [
 		{
 			"args": {},
-			"calls": 826973,
+			"calls": 833013,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				" by b",
@@ -76,6 +76,6 @@
 			]
 		}
 	],
-	"updt": 1568110678250,
-	"edit": 65
+	"updt": 1568118346999,
+	"edit": 66
 }
