--- a/unknown_32snxj.mag.json
+++ b/unknown_32snxj.mag.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_32snxj.mag",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_32snxj.mag",
 	"sector": "NGC_1836",
 	"sec_level": 4,
 	"date_added": 1564690214907,
-	"last_scraped": 1568201202802,
+	"last_scraped": 1568699566311,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564690214907
 		}
 	],
-	"next_scrape": 1568245421420,
+	"next_scrape": 1568743001453,
 	"category": "plant_sim",
-	"last_update": 1568201202802,
+	"last_update": 1568699566311,
 	"output": [
 		{
 			"args": {},
@@ -49,7 +49,7 @@
 		},
 		{
 			"args": {},
-			"calls": 50198,
+			"calls": 51222,
 			"base": "c:\"qta0g2\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ible ",
@@ -93,6 +93,6 @@
 			]
 		}
 	],
-	"updt": 1568194627635,
-	"edit": 58
+	"updt": 1568201401205,
+	"edit": 59
 }
