--- a/unknown_etjdee.render.json
+++ b/unknown_etjdee.render.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_etjdee.render",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_etjdee.render",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564168295048,
-	"last_scraped": 1568099565656,
+	"last_scraped": 1568698693784,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564168295048
 		}
 	],
-	"updt": 1568091731410,
-	"edit": 166,
-	"next_scrape": 1568143056809,
+	"updt": 1568099628277,
+	"edit": 167,
+	"next_scrape": 1568739259671,
 	"category": "plant_sim",
-	"last_update": 1568099565656,
+	"last_update": 1568698693784,
 	"output": [
 		{
 			"args": {},
@@ -236,7 +236,7 @@
 		},
 		{
 			"args": {},
-			"calls": 37230,
+			"calls": 37762,
 			"base": "c:\"5czxxn\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"r exa",
