--- a/unknown_hz6ahx.scam.json
+++ b/unknown_hz6ahx.scam.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_hz6ahx.scam",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "npc",
 	"script": "unknown_hz6ahx.scam",
 	"sector": "K_4785",
 	"sec_level": 4,
 	"date_added": 1565877756940,
-	"last_scraped": 1568079008589,
+	"last_scraped": 1568698603396,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565877756940
 		}
 	],
-	"next_scrape": 1568120831253,
+	"next_scrape": 1568743048687,
 	"category": "plant_sim",
-	"last_update": 1568079008589,
+	"last_update": 1568698603396,
 	"output": [
 		{
 			"args": {},
@@ -49,7 +49,7 @@
 		},
 		{
 			"args": {},
-			"calls": 31116,
+			"calls": 31816,
 			"base": "c:\"8naiyw\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"cards",
@@ -93,6 +93,6 @@
 			]
 		}
 	],
-	"updt": 1568070299439,
-	"edit": 40
+	"updt": 1568079095335,
+	"edit": 41
 }
