--- a/unknown_qnouq5.sectors.json
+++ b/unknown_qnouq5.sectors.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_qnouq5.sectors",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_qnouq5.sectors",
 	"sector": "NGC_1495",
 	"sec_level": 4,
 	"date_added": 1561782074141,
-	"last_scraped": 1568153503700,
+	"last_scraped": 1568699115463,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561782074141
 		}
 	],
-	"next_scrape": 1568197293552,
+	"next_scrape": 1568741706390,
 	"category": "coin_flipper",
-	"last_update": 1568153503700,
+	"last_update": 1568699115463,
 	"output": [
 		{
 			"args": {},
-			"calls": 1292709,
+			"calls": 1301487,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"7_FILE",
@@ -58,8 +58,8 @@
 			]
 		}
 	],
-	"updt": 1568145190409,
-	"edit": 124,
+	"updt": 1568153531231,
+	"edit": 125,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
