--- a/unknown_yf9eh6.jpg.json
+++ b/unknown_yf9eh6.jpg.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_yf9eh6.jpg",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_yf9eh6.jpg",
 	"sector": "K_9564",
 	"sec_level": 4,
 	"date_added": 1563841681486,
-	"last_scraped": 1568082727774,
+	"last_scraped": 1568698633226,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563841681486
 		}
 	],
-	"next_scrape": 1568129135604,
+	"next_scrape": 1568741358533,
 	"category": "dice_roller",
-	"last_update": 1568082727774,
+	"last_update": 1568698633226,
 	"output": [
 		{
 			"args": {},
-			"calls": 849759,
+			"calls": 854003,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"erati",
@@ -87,6 +87,6 @@
 			]
 		}
 	],
-	"updt": 1568082704802,
-	"edit": 70
+	"updt": 1568082930171,
+	"edit": 71
 }
