--- a/uknown_ax85yb.bot_scam_do_not_run.json
+++ b/uknown_ax85yb.bot_scam_do_not_run.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ax85yb.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_ax85yb.bot_scam_do_not_run",
 	"sector": "SPC_0043",
 	"sec_level": 4,
 	"date_added": 1565687108587,
-	"last_scraped": 1568204281650,
+	"last_scraped": 1568699668043,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 14,
-	"next_scrape": 1568247897019,
+	"next_scrape": 1568741593020,
 	"category": "coin_flipper",
-	"last_update": 1568204281650,
+	"last_update": 1568699668043,
 	"output": [
 		{
 			"args": {},
-			"calls": 565246,
+			"calls": 571231,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				" a th",
@@ -64,6 +64,6 @@
 			]
 		}
 	],
-	"updt": 1568196887035,
-	"edit": 55
+	"updt": 1568204327263,
+	"edit": 56
 }
