--- a/uknown_b6y9vb.peddle.json
+++ b/uknown_b6y9vb.peddle.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_b6y9vb.peddle",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "player",
 	"script": "uknown_b6y9vb.peddle",
 	"sector": "K_8416",
 	"sec_level": 0,
 	"date_added": 1558821408422,
-	"last_scraped": 1568173665925,
+	"last_scraped": 1568699307630,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,8 +21,8 @@
 			}
 		]
 	],
-	"updt": 1568165983764,
-	"edit": 55,
+	"updt": 1568174101420,
+	"edit": 56,
 	"pl_output": "{\"ok\":true,\"msg\":\"\"}",
-	"next_scrape": 1568254314196
+	"next_scrape": 1568788521803
 }
