--- a/uknown_rhkdnz.sortupgrades.json
+++ b/uknown_rhkdnz.sortupgrades.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_rhkdnz.sortupgrades",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_rhkdnz.sortupgrades",
 	"sector": "SPC_6536",
 	"sec_level": 4,
 	"date_added": 1564761469085,
-	"last_scraped": 1568172770749,
+	"last_scraped": 1568699286203,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564761469085
 		}
 	],
-	"next_scrape": 1568215489568,
+	"next_scrape": 1568744575956,
 	"category": "coin_flipper",
-	"last_update": 1568172770749,
+	"last_update": 1568699286203,
 	"output": [
 		{
 			"args": {},
-			"calls": 1279119,
+			"calls": 1293309,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"u fou",
@@ -69,6 +69,6 @@
 			]
 		}
 	],
-	"updt": 1568172750417,
-	"edit": 105
+	"updt": 1568699285097,
+	"edit": 107
 }
