--- a/uknown_xb5p8t.mud.json
+++ b/uknown_xb5p8t.mud.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_xb5p8t.mud",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_xb5p8t.mud",
 	"sector": "VNP_3290",
 	"sec_level": 4,
 	"date_added": 1564665103923,
-	"last_scraped": 1568129977148,
+	"last_scraped": 1568698894379,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564665103923
 		}
 	],
-	"next_scrape": 1568173508047,
+	"next_scrape": 1568744401487,
 	"category": "dice_roller",
-	"last_update": 1568129977148,
+	"last_update": 1568698894379,
 	"output": [
 		{
 			"args": {},
-			"calls": 1243408,
+			"calls": 1251100,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"of an",
@@ -134,6 +134,6 @@
 			]
 		}
 	],
-	"updt": 1568122179200,
-	"edit": 108
+	"updt": 1568130077915,
+	"edit": 109
 }
