--- a/uknown_yoxqm5.ads.json
+++ b/uknown_yoxqm5.ads.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_yoxqm5.ads",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_yoxqm5.ads",
 	"sector": "SPC_9562",
 	"sec_level": 4,
 	"date_added": 1566556056558,
-	"last_scraped": 1568134111313,
+	"last_scraped": 1568698944798,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566556056558
 		}
 	],
-	"next_scrape": 1568178225751,
+	"next_scrape": 1568739412953,
 	"category": "dice_roller",
-	"last_update": 1568134111313,
+	"last_update": 1568698944798,
 	"output": [
 		{
 			"args": {},
-			"calls": 1065504,
+			"calls": 1073338,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"XE2A8",
@@ -66,6 +66,6 @@
 			]
 		}
 	],
-	"updt": 1568125792791,
-	"edit": 91
+	"updt": 1568134134022,
+	"edit": 92
 }
