--- a/uknown_ypswbu.gbdis.json
+++ b/uknown_ypswbu.gbdis.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_ypswbu.gbdis",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_ypswbu.gbdis",
 	"sector": "NGC_1037",
 	"sec_level": 4,
 	"date_added": 1564248854714,
-	"last_scraped": 1568209295068,
+	"last_scraped": 1568699677879,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564248854714
 		}
 	],
-	"next_scrape": 1568253201343,
+	"next_scrape": 1568745673315,
 	"category": "coin_flipper",
-	"last_update": 1568209295068,
+	"last_update": 1568699677879,
 	"output": [
 		{
 			"args": {},
-			"calls": 1896259,
+			"calls": 1903485,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ROG ER",
@@ -88,6 +88,6 @@
 			]
 		}
 	],
-	"updt": 1568209286197,
-	"edit": 165
+	"updt": 1568209511893,
+	"edit": 166
 }
