--- a/unknown_8xqncq.lights.json
+++ b/unknown_8xqncq.lights.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_8xqncq.lights",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "npc",
 	"script": "unknown_8xqncq.lights",
 	"sector": "VNP_5176",
 	"sec_level": 4,
 	"date_added": 1563964441642,
-	"last_scraped": 1568180766782,
+	"last_scraped": 1568699366353,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563964441642
 		}
 	],
-	"next_scrape": 1568224468959,
+	"next_scrape": 1568745570462,
 	"category": "dice_roller",
-	"last_update": 1568180766782,
+	"last_update": 1568699366353,
 	"output": [
 		{
 			"args": {},
-			"calls": 2361034,
+			"calls": 2368993,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ours.",
@@ -72,6 +72,6 @@
 			]
 		}
 	],
-	"updt": 1568173424724,
-	"edit": 220
+	"updt": 1568180872812,
+	"edit": 221
 }
