--- a/unknown_jmk7tk.bot_scam_do_not_run.json
+++ b/unknown_jmk7tk.bot_scam_do_not_run.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_jmk7tk.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_jmk7tk.bot_scam_do_not_run",
 	"sector": "NGC_7203",
 	"sec_level": 4,
 	"date_added": 1566828439520,
-	"last_scraped": 1568111210270,
+	"last_scraped": 1568698755584,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 5,
-	"next_scrape": 1568152929679,
+	"next_scrape": 1568742250095,
 	"category": "coin_flipper",
-	"last_update": 1568111210270,
+	"last_update": 1568698755584,
 	"output": [
 		{
 			"args": {},
-			"calls": 532864,
+			"calls": 536706,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ttack",
@@ -130,6 +130,6 @@
 			]
 		}
 	],
-	"updt": 1568103689020,
-	"edit": 42
+	"updt": 1568111355616,
+	"edit": 43
 }
