--- a/unknown_tffux6.random.json
+++ b/unknown_tffux6.random.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_tffux6.random",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_tffux6.random",
 	"sector": "SPC_2500",
 	"sec_level": 4,
 	"date_added": 1563097327765,
-	"last_scraped": 1568201412488,
+	"last_scraped": 1568699577551,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563097327765
 		}
 	],
-	"next_scrape": 1568243222791,
+	"next_scrape": 1568744375479,
 	"category": "coin_flipper",
-	"last_update": 1568201412488,
+	"last_update": 1568699577551,
 	"output": [
 		{
 			"args": {},
-			"calls": 2362741,
+			"calls": 2369309,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ry Ch",
@@ -69,6 +69,6 @@
 			]
 		}
 	],
-	"updt": 1568201401205,
-	"edit": 212
+	"updt": 1568201624245,
+	"edit": 213
 }
