--- a/derelict_clrnxi.donate.json
+++ b/derelict_clrnxi.donate.json
@@ -1,21 +1,21 @@
 {
 	"_id": "derelict_clrnxi.donate",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "derelict_clrnxi.donate",
 	"sector": "SPC_4267",
 	"sec_level": 4,
 	"date_added": 1565382488474,
-	"last_scraped": 1568239209200,
+	"last_scraped": 1568699990182,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565382488474
 		}
 	],
-	"next_scrape": 1568282890234,
+	"next_scrape": 1568742296168,
 	"category": "plant_sim",
-	"last_update": 1568239209200,
+	"last_update": 1568699990182,
 	"output": [
 		{
 			"args": {},
@@ -43,7 +43,7 @@
 		},
 		{
 			"args": {},
-			"calls": 54445,
+			"calls": 55545,
 			"base": "c:\"wz0fyi\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"7_FIL",
@@ -78,6 +78,6 @@
 			]
 		}
 	],
-	"updt": 1568232740554,
-	"edit": 68
+	"updt": 1568239276952,
+	"edit": 69
 }
