--- a/unknown_0o6wpi.paypal.json
+++ b/unknown_0o6wpi.paypal.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_0o6wpi.paypal",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_0o6wpi.paypal",
 	"sector": "HJG_0482",
 	"sec_level": 4,
 	"date_added": 1565327917562,
-	"last_scraped": 1568283981181,
+	"last_scraped": 1568700180532,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565327917562
 		}
 	],
-	"next_scrape": 1568328342981,
+	"next_scrape": 1568740790532,
 	"category": "plant_sim",
-	"last_update": 1568283981181,
+	"last_update": 1568700180532,
 	"output": [
 		{
 			"args": {},
@@ -43,7 +43,7 @@
 		},
 		{
 			"args": {},
-			"calls": 54803,
+			"calls": 55554,
 			"base": "c:\"dep9ej\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"uild w",
@@ -102,6 +102,6 @@
 			]
 		}
 	],
-	"updt": 1568277623063,
-	"edit": 95
+	"updt": 1568284158319,
+	"edit": 96
 }
