--- a/unknown_2032zb.bot_brain.json
+++ b/unknown_2032zb.bot_brain.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_2032zb.bot_brain",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_2032zb.bot_brain",
 	"sector": "K_6566",
 	"sec_level": 4,
 	"date_added": 1563000670734,
-	"last_scraped": 1568230622690,
+	"last_scraped": 1568699911143,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563000670734
 		}
 	],
-	"updt": 1568223720871,
-	"edit": 262,
-	"next_scrape": 1568272454066,
+	"updt": 1568230712926,
+	"edit": 263,
+	"next_scrape": 1568739643091,
 	"category": "coin_flipper",
-	"last_update": 1568230622690,
+	"last_update": 1568699911143,
 	"output": [
 		{
 			"args": {},
-			"calls": 3011411,
+			"calls": 3017465,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				" very",
