--- a/unknown_6mixmg.whitelist.json
+++ b/unknown_6mixmg.whitelist.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_6mixmg.whitelist",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "npc",
 	"script": "unknown_6mixmg.whitelist",
 	"sector": "SPC_8561",
 	"sec_level": 4,
 	"date_added": 1566979293534,
-	"last_scraped": 1568240746313,
+	"last_scraped": 1568700009466,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 4,
-	"next_scrape": 1568326632255,
+	"next_scrape": 1568740979556,
 	"category": "plant_sim",
-	"last_update": 1568240746313,
+	"last_update": 1568700009466,
 	"output": [
 		{
 			"args": {},
@@ -212,6 +212,23 @@
 					]
 				}
 			]
+		},
+		{
+			"args": {},
+			"calls": 516,
+			"base": "c:\"jxs8op\" d:\"<f l n s w>\"\n\n\n\n              \n                  _\n              Ã ÃÁ__\n               \\Á/Á Á\n              ",
+			"fragments": [
+				"ould b",
+				"l, e, ",
+				"## goo",
+				" obstr",
+				"g to be",
+				"d you c",
+				", e, im",
+				"ng max a",
+				"ld bring",
+				", impres"
+			]
 		}
 	],
 	"identified": [
@@ -236,6 +253,6 @@
 			]
 		}
 	],
-	"updt": 1568234545537,
-	"edit": 61
+	"updt": 1568240854622,
+	"edit": 62
 }
