--- a/unknown_w56b7q.stock.json
+++ b/unknown_w56b7q.stock.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_w56b7q.stock",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_w56b7q.stock",
 	"sector": "K_9897",
 	"sec_level": 2,
 	"date_added": 1558821408422,
-	"last_scraped": 1568270786714,
+	"last_scraped": 1568700089671,
 	"script_log": [
 		{
 			"type": "added",
@@ -25,12 +25,12 @@
 			}
 		]
 	],
-	"updt": 1568264310135,
-	"edit": 407,
+	"updt": 1568270852768,
+	"edit": 408,
 	"output": [
 		{
 			"args": {},
-			"calls": 290078,
+			"calls": 290678,
 			"base": "You are not whitelisted. But you can donate to Doggo Corp. using donate:amount :)",
 			"fragments": [
 				" will",
@@ -75,10 +75,10 @@
 			]
 		}
 	],
-	"next_scrape": 1568313047701,
+	"next_scrape": 1568745229770,
 	"pl_output": "You are not whitelisted. But you can donate to Doggo Corp. using donate:amount :)",
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568270786714,
+	"last_update": 1568700089671,
 	"old_output": "You are not whitelisted. But you can donate to Doggo Corp. using donate:amount :)",
 	"identified": [
 		{
