--- a/uknown_lx2epa.bbs.json
+++ b/uknown_lx2epa.bbs.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lx2epa.bbs",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "player",
 	"script": "uknown_lx2epa.bbs",
 	"sector": "K_5861",
 	"sec_level": 4,
 	"date_added": 1561431825883,
-	"last_scraped": 1568244437789,
+	"last_scraped": 1568700049241,
 	"script_log": [
 		{
 			"type": "added",
@@ -26,7 +26,7 @@
 		]
 	],
 	"pl_output": "{\"ok\":false,\"msg\":\"Please give me a `Nmode` : `V\\\"read\\\"` or `V\\\"write\\\"` to proceed.\"}",
-	"next_scrape": 1568331869955,
-	"updt": 1568238375924,
-	"edit": 101
+	"next_scrape": 1568785257360,
+	"updt": 1568244463403,
+	"edit": 102
 }
