--- a/uknown_9pb06p.ls.json
+++ b/uknown_9pb06p.ls.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_9pb06p.ls",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_9pb06p.ls",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1558821408422,
-	"last_scraped": 1568331099314,
+	"last_scraped": 1568700727898,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,12 +21,12 @@
 			}
 		]
 	],
-	"updt": 1568323603349,
-	"edit": 279,
+	"updt": 1568331496277,
+	"edit": 280,
 	"output": [
 		{
 			"args": {},
-			"calls": 20614383,
+			"calls": 20728856,
 			"base": "uknown_9pb06p.ls { ls: <regex> }",
 			"fragments": [
 				"me pa",
@@ -69,11 +69,11 @@
 			]
 		}
 	],
-	"next_scrape": 1568374053912,
+	"next_scrape": 1568747371876,
 	"pl_output": "uknown_9pb06p.ls { ls: <regex> }",
 	"scrape_ct": 11,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568331099314,
+	"last_update": 1568700727898,
 	"old_output": "uknown_9pb06p.ls { ls: <regex> }",
 	"identified": [
 		{
