--- a/unknown_hebj0c.break.json
+++ b/unknown_hebj0c.break.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_hebj0c.break",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_hebj0c.break",
 	"sector": "NGC_7257",
 	"sec_level": 4,
 	"date_added": 1565425408880,
-	"last_scraped": 1568414003286,
+	"last_scraped": 1568701291252,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565425408880
 		}
 	],
-	"next_scrape": 1568458056467,
+	"next_scrape": 1568746861538,
 	"category": "plant_sim",
-	"last_update": 1568414003286,
+	"last_update": 1568701291252,
 	"output": [
 		{
 			"args": {},
@@ -45,7 +45,7 @@
 		},
 		{
 			"args": {},
-			"calls": 83110,
+			"calls": 83864,
 			"base": "c:\"118fu8\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				" be A",
@@ -83,6 +83,6 @@
 			]
 		}
 	],
-	"updt": 1568408851845,
-	"edit": 95
+	"updt": 1568414044779,
+	"edit": 96
 }
