--- a/unknown_k8rbwr.loc.json
+++ b/unknown_k8rbwr.loc.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_k8rbwr.loc",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_k8rbwr.loc",
 	"sector": "HJG_4601",
 	"sec_level": 4,
 	"date_added": 1566036024528,
-	"last_scraped": 1568325576766,
+	"last_scraped": 1568700707469,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566036024528
 		}
 	],
-	"next_scrape": 1568365833478,
+	"next_scrape": 1568741795090,
 	"category": "plant_sim",
-	"last_update": 1568325576766,
+	"last_update": 1568700707469,
 	"output": [
 		{
 			"args": {},
@@ -47,7 +47,7 @@
 		},
 		{
 			"args": {},
-			"calls": 59533,
+			"calls": 60299,
 			"base": "c:\"ii4noy\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"tter i",
@@ -88,6 +88,6 @@
 			]
 		}
 	],
-	"updt": 1568317961272,
-	"edit": 88
+	"updt": 1568325636007,
+	"edit": 89
 }
