--- a/unknown_ywicgz.bot_brain.json
+++ b/unknown_ywicgz.bot_brain.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_ywicgz.bot_brain",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "npc",
 	"script": "unknown_ywicgz.bot_brain",
 	"sector": "K_2655",
 	"sec_level": 4,
 	"date_added": 1565132603473,
-	"last_scraped": 1568370273494,
+	"last_scraped": 1568701059064,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565132603473
 		}
 	],
-	"next_scrape": 1568451005568,
+	"next_scrape": 1568744823593,
 	"category": "plant_sim",
-	"last_update": 1568370273494,
+	"last_update": 1568701059064,
 	"output": [
 		{
 			"args": {},
@@ -51,7 +51,7 @@
 		},
 		{
 			"args": {},
-			"calls": 72793,
+			"calls": 74121,
 			"base": "c:\"uvt0kv\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"at th",
@@ -106,6 +106,6 @@
 			]
 		}
 	],
-	"updt": 1568365097891,
-	"edit": 87
+	"updt": 1568370289207,
+	"edit": 88
 }
