--- a/uknown_18chv1.devops.json
+++ b/uknown_18chv1.devops.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_18chv1.devops",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_18chv1.devops",
 	"sector": "K_1197",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1559908830836
+		},
+		{
+			"type": "died",
+			"when": 1568701846833
 		}
 	],
 	"next_scrape": 1568730559102,
@@ -165,8 +169,8 @@
 			]
 		}
 	],
-	"updt": 1567719229566,
-	"edit": 141,
+	"updt": 1568690930922,
+	"edit": 142,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
