--- a/uknown_njenax.t1.json
+++ b/uknown_njenax.t1.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_njenax.t1",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_njenax.t1",
 	"sector": "HJG_0244",
 	"sec_level": 4,
 	"date_added": 1561144306524,
-	"last_scraped": 1568570500106,
+	"last_scraped": 1568702104890,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561144306524
 		}
 	],
-	"next_scrape": 1568612707538,
+	"next_scrape": 1568743811101,
 	"category": "dice_roller",
-	"last_update": 1568570500106,
+	"last_update": 1568702104890,
 	"output": [
 		{
 			"args": {},
-			"calls": 2996700,
+			"calls": 3005441,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"nd co",
@@ -70,8 +70,8 @@
 			]
 		}
 	],
-	"updt": 1568563604082,
-	"edit": 305,
+	"updt": 1568570598572,
+	"edit": 306,
 	"identified": [
 		{
 			"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
