--- a/unknown_v602ar.distribute.json
+++ b/unknown_v602ar.distribute.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_v602ar.distribute",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_v602ar.distribute",
 	"sector": "NGC_5259",
 	"sec_level": 4,
 	"date_added": 1563305531375,
-	"last_scraped": 1568456470610,
+	"last_scraped": 1568701661568,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563305531375
 		}
 	],
-	"next_scrape": 1568498678372,
+	"next_scrape": 1568745596843,
 	"category": "dice_roller",
-	"last_update": 1568456470610,
+	"last_update": 1568701661568,
 	"output": [
 		{
 			"args": {},
-			"calls": 3007140,
+			"calls": 3017381,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"t surp",
@@ -81,6 +81,6 @@
 			]
 		}
 	],
-	"updt": 1568456457921,
-	"edit": 283
+	"updt": 1568456682176,
+	"edit": 284
 }
