--- a/unknown_wt9h2y.flush.json
+++ b/unknown_wt9h2y.flush.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_wt9h2y.flush",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "player",
 	"script": "unknown_wt9h2y.flush",
 	"sector": "VNP_8719",
 	"sec_level": 2,
 	"date_added": 1563656292128,
-	"last_scraped": 1568510264495,
+	"last_scraped": 1568701873633,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,7 +14,7 @@
 		}
 	],
 	"pl_output": ":flush: 0\n{\"ok\":false,\"msg\":\"Your account balance of 0GC is too low to send 1GC.\"}",
-	"next_scrape": 1568590905924,
-	"updt": 1568505722412,
-	"edit": 125
+	"next_scrape": 1568784975708,
+	"updt": 1568510460032,
+	"edit": 126
 }
