--- a/unknown_z0zxqu.xkcd.json
+++ b/unknown_z0zxqu.xkcd.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_z0zxqu.xkcd",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_z0zxqu.xkcd",
 	"sector": "NGC_7257",
 	"sec_level": 4,
 	"date_added": 1565401172719,
-	"last_scraped": 1568507101349,
+	"last_scraped": 1568701863626,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 5,
-	"next_scrape": 1568549907938,
+	"next_scrape": 1568744103001,
 	"category": "plant_sim",
-	"last_update": 1568507101349,
+	"last_update": 1568701863626,
 	"output": [
 		{
 			"args": {},
@@ -44,7 +44,7 @@
 		},
 		{
 			"args": {},
-			"calls": 98103,
+			"calls": 98551,
 			"base": "c:\"ajebl6\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"W ERR",
@@ -79,6 +79,6 @@
 			]
 		}
 	],
-	"updt": 1568507077010,
-	"edit": 107
+	"updt": 1568507301288,
+	"edit": 108
 }
