--- a/uknown_18chv1.beecryption.json
+++ b/uknown_18chv1.beecryption.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_18chv1.beecryption",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_18chv1.beecryption",
 	"sector": "HJG_6782",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565644306479
+		},
+		{
+			"type": "died",
+			"when": 1568701829485
 		}
 	],
 	"scrape_ct": 20,
@@ -83,8 +87,8 @@
 			]
 		}
 	],
-	"updt": 1567898821848,
-	"edit": 20,
+	"updt": 1568697706942,
+	"edit": 21,
 	"identified": [
 		{
 			"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
