--- a/uknown_h7aui7.bot_midsec.json
+++ b/uknown_h7aui7.bot_midsec.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_h7aui7.bot_midsec",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_h7aui7.bot_midsec",
 	"sector": "K_3804",
 	"sec_level": 4,
 	"date_added": 1564547536219,
-	"last_scraped": 1568595219954,
+	"last_scraped": 1568702254978,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 16,
-	"next_scrape": 1568636131312,
+	"next_scrape": 1568747863308,
 	"category": "dice_roller",
-	"last_update": 1568595219954,
+	"last_update": 1568702254978,
 	"output": [
 		{
 			"args": {},
-			"calls": 1093657,
+			"calls": 1100859,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"tal s",
@@ -51,8 +51,8 @@
 			]
 		}
 	],
-	"updt": 1568591575128,
-	"edit": 125,
+	"updt": 1568595413139,
+	"edit": 126,
 	"identified": [
 		{
 			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
