--- a/uknown_zfq3ba.binmat_bot.json
+++ b/uknown_zfq3ba.binmat_bot.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_zfq3ba.binmat_bot",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_zfq3ba.binmat_bot",
 	"sector": "K_8441",
 	"sec_level": 4,
 	"date_added": 1562032600019,
-	"last_scraped": 1568447803751,
+	"last_scraped": 1568701652042,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562032600019
 		}
 	],
-	"next_scrape": 1568492838676,
+	"next_scrape": 1568747612806,
 	"category": "dice_roller",
-	"last_update": 1568447803751,
+	"last_update": 1568701652042,
 	"output": [
 		{
 			"args": {},
-			"calls": 3323472,
+			"calls": 3342391,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"PRIAT",
@@ -84,6 +84,6 @@
 			]
 		}
 	],
-	"updt": 1568443366078,
-	"edit": 322
+	"updt": 1568447881739,
+	"edit": 323
 }
