--- a/abandoned_8nxhv2.db.json
+++ b/abandoned_8nxhv2.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "abandoned_8nxhv2.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "abandoned_8nxhv2.db",
 	"sector": "HJG_7908",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565553244836
+		},
+		{
+			"type": "died",
+			"when": 1568703226393
 		}
 	],
 	"next_scrape": 1568722682961,
@@ -75,6 +79,6 @@
 			]
 		}
 	],
-	"updt": 1568673557282,
-	"edit": 156
+	"updt": 1568677170330,
+	"edit": 157
 }
