--- a/abandoned_8nxhv2.scrape.json
+++ b/abandoned_8nxhv2.scrape.json
@@ -1,7 +1,7 @@
 {
 	"_id": "abandoned_8nxhv2.scrape",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "abandoned_8nxhv2.scrape",
 	"sector": "K_0689",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561699104212
+		},
+		{
+			"type": "died",
+			"when": 1568703110394
 		}
 	],
 	"next_scrape": 1568730827128,
@@ -295,6 +299,6 @@
 			]
 		}
 	],
-	"updt": 1567714945331,
-	"edit": 59
+	"updt": 1568688899449,
+	"edit": 60
 }
