--- a/uknown_ewk6vx.libdb.json
+++ b/uknown_ewk6vx.libdb.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ewk6vx.libdb",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_ewk6vx.libdb",
 	"sector": "HJG_7617",
 	"sec_level": 4,
 	"date_added": 1566226212198,
-	"last_scraped": 1568628443888,
+	"last_scraped": 1568702467895,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 6,
-	"next_scrape": 1568671428981,
+	"next_scrape": 1568744789946,
 	"category": "coin_flipper",
-	"last_update": 1568628443888,
+	"last_update": 1568702467895,
 	"output": [
 		{
 			"args": {},
-			"calls": 1219421,
+			"calls": 1223249,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"y tak",
@@ -153,6 +153,6 @@
 			]
 		}
 	],
-	"updt": 1568624966236,
-	"edit": 139
+	"updt": 1568628573531,
+	"edit": 140
 }
