--- a/uknown_r9elib.script.json
+++ b/uknown_r9elib.script.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_r9elib.script",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_r9elib.script",
 	"sector": "K_4792",
 	"sec_level": 4,
 	"date_added": 1561385143168,
-	"last_scraped": 1568631919337,
+	"last_scraped": 1568702527107,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561385143168
 		}
 	],
-	"next_scrape": 1568672383492,
+	"next_scrape": 1568742284222,
 	"category": "coin_flipper",
-	"last_update": 1568631919337,
+	"last_update": 1568702527107,
 	"output": [
 		{
 			"args": {},
-			"calls": 4779452,
+			"calls": 4790733,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"oice:",
@@ -76,8 +76,8 @@
 			]
 		}
 	],
-	"updt": 1568628573531,
-	"edit": 434,
+	"updt": 1568632187029,
+	"edit": 435,
 	"identified": [
 		{
 			"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
