--- a/uknown_tuh6rk.stealgc.json
+++ b/uknown_tuh6rk.stealgc.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_tuh6rk.stealgc",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_tuh6rk.stealgc",
 	"sector": "NGC_4040",
 	"sec_level": 4,
 	"date_added": 1565570384834,
-	"last_scraped": 1568659355336,
+	"last_scraped": 1568702687051,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1568706033029,
+	"next_scrape": 1568743353964,
 	"category": "dice_roller",
-	"last_update": 1568659355336,
+	"last_update": 1568702687051,
 	"output": [
 		{
 			"args": {},
-			"calls": 1336512,
+			"calls": 1347106,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"to ne",
@@ -58,6 +58,6 @@
 			]
 		}
 	],
-	"updt": 1568659339280,
-	"edit": 143
+	"updt": 1568659563871,
+	"edit": 144
 }
